@@ -1,6 +1,7 @@
 === 2017-01-19
 * Enhancements
   * Added elements method to accessor so one can generate methods for generic collections of elements
+  * Added class_name method to Element
 === Version 1.1.8/2017-01-18
 * Enhancements
   * Added ability to find elements using any valid attribute
